--- a/src/main/resources/templates/model-page.html
+++ b/src/main/resources/templates/model-page.html
@@ -10,6 +10,10 @@
     <span>Name:  <th:block th:text="${name}">[name]</th:block></span> <br />
     <span>Language: <th:block th:text="${language}">[language]</th:block></span> <br />
     <span>Framework: <th:block th:text="${framework}">[framework]</th:block></span> <br />
+    <span>Planet: <th:block th:text="${planet}">[framework]</th:block></span> <br />
+    <span>Section: <th:block th:text="${section}">[framework]</th:block></span> <br />
+    <span>FavoriteColor: <th:block th:text="${favoriteColor}">[framework]</th:block></span> <br />
+    <span>Age: <th:block th:text="${age}">[framework]</th:block></span> <br />
 
     <span><a th:href="@{/model-and-view-page}">Click here for the ModelAndView Page</a></span>
 </h2>
